Add rest of cmake C++11 features and tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
+CMAKE_MINIMUM_REQUIRED(VERSION 3.4)
 PROJECT(kppm)
 
 SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake_modules/")
@@ -36,5 +36,10 @@ LINK_DIRECTORIES(${CPLEX_LIBRARY_PATH})
 FIND_PACKAGE(Boost COMPONENTS program_options)
 INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})
 
+
 ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/src)
 
+IF(TESTSUITE)
+  ENABLE_TESTING()
+  ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/Examples)
+ENDIF(TESTSUITE)
