Require new(ish) version of Boost

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,7 +33,7 @@ FIND_PACKAGE(CPLEX REQUIRED)
 INCLUDE_DIRECTORIES(${CPLEX_INCLUDE_DIR})
 LINK_DIRECTORIES(${CPLEX_LIBRARY_PATH})
 
-FIND_PACKAGE(Boost COMPONENTS program_options)
+FIND_PACKAGE(Boost 1.57.0 COMPONENTS program_options)
 INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})
 
 ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/src)
